force-app/main/default/objects/Operations_Goal__c/Operations_Goal__c.object-meta.xml
<CustomObject>
    <description>Mining project goal</description>
    <label>Operations Goal</label>
    <nameField>
        <displayFormat>OPG-{0000}</displayFormat>
        <label>Operation Goal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations Goals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>