force-app/main/default/objects/Operations_Goal__c/fields/Cost_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Operation__c</fullName>
    <label>Cost of Operation</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>