force-app/main/default/objects/Operations_Goal__c/fields/Extraction_Techique__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Techique__c</fullName>
    <label>Extraction Techique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surface</fullName>
            </value>
            <value>
                <fullName>Shaft</fullName>
            </value>
            <value>
                <fullName>Magnetic</fullName>
            </value>
            <value>
                <fullName>Heating</fullName>
            </value>
            <value>
                <fullName>Mond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>