force-app/main/default/objects/Operations_Goal__c/fields/Name_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Project__c</fullName>
    <label>Choose a Project Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sirius</fullName>
            </value>
            <value>
                <fullName>Canopus</fullName>
            </value>
            <value>
                <fullName>Vega</fullName>
            </value>
            <value>
                <fullName>Capella</fullName>
            </value>
            <value>
                <fullName>Rigel</fullName>
            </value>
            <value>
                <fullName>Procyon</fullName>
            </value>
            <value>
                <fullName>Betelgeuse</fullName>
            </value>
            <value>
                <fullName>Antares</fullName>
            </value>
            <value>
                <fullName>Aldebaran</fullName>
            </value>
            <value>
                <fullName>Achernar</fullName>
            </value>
            <value>
                <fullName>Hadar</fullName>
            </value>
            <value>
                <fullName>Acrux</fullName>
            </value>
            <value>
                <fullName>Pollux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>