force-app/main/default/objects/Operations_Goal__c/fields/Number_of_Digging_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Digging_Sites__c</fullName>
    <label>Number of Digging Sites</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>