force-app/main/default/objects/Operations_Goal__c/fields/Operation_Location__c.field-meta.xml
<CustomField>
    <fullName>Operation_Location__c</fullName>
    <label>Operation Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Earth</fullName>
            </value>
            <value>
                <fullName>Moon</fullName>
            </value>
            <value>
                <fullName>Mars</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>Io</fullName>
            </value>
            <value>
                <fullName>Europa</fullName>
            </value>
            <value>
                <fullName>Enceledus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>