force-app/main/default/objects/Operations_Goal__c/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations</label>
    <referenceTo>Operations__c</referenceTo>
    <relationshipLabel>Operations Goals</relationshipLabel>
    <relationshipName>Operations_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>