force-app/main/default/objects/Operations_Goal__c/listViews/Site_Manager_Queues_Operations_Goal.listView-meta.xml
<ListView>
    <fullName>Site_Manager_Queues_Operations_Goal</fullName>
    <filterScope>Queue</filterScope>
    <label>Site Manager Queues</label>
    <queue>Site_Manager_Queues</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>